--- a/mixed/nitrofen.qmd
+++ b/mixed/nitrofen.qmd
@@ -111,6 +111,26 @@ estimated at $0.302$ which is noticeably smaller than the estimates
 above, indicating that the brood and concentration effects outweigh the
 individual variation.
 
+We can make a plot of the mean predicted response as concentration and
+brood vary. I have arbitrarily picked the first ID but we could pick any
+or average across these.
+
+
+```{r}
+#| label: fig-prednitro
+#| fig-cap: "Predicted number of live offspring"
+predf = data.frame(conc=rep(c(0,80,160,235,310),each=3),brood=rep(1:3,5),id=1)
+predf$live = exp(predict(glmod, newdata=predf))
+predf$brood = factor(predf$brood)
+ggplot(predf, aes(x=conc,y=live,group=brood,color=brood)) + 
+  geom_line() + xlab("Concentration")
+```
+
+We see that if only the first brood were considered, the herbicide does not
+have much effect. In the second and third broods, the (negative) effect of the 
+herbicide becomes more apparent with fewer live offspring being produced
+as the concentration rises.
+
 # INLA
 
 Integrated nested Laplace approximation is a method of Bayesian computation
@@ -206,6 +226,13 @@ The results are consistent with previous results.
 
 # MGCV
 
+It is possible to fit some GLMMs within the GAM framework of the `mgcv`
+package. An explanation of this can be found in this 
+[blog](https://fromthebottomoftheheap.net/2021/02/02/random-effects-in-gams/)
+
+We need to make a factor version of id otherwise it gets treated
+as a numerical variable.
+
 ```{r}
 lnitrofen$fid = factor(lnitrofen$id)
 gmod = gam(live ~ I(conc/300)*brood + s(fid,bs="re"), 
@@ -219,7 +246,7 @@ summary(gmod)
 ```
 
 We get the fixed effect estimates.
-We also get a test on the random effect (as described in this [article](https://doi.org/10.1093/biomet/ast038). The hypothesis of no variation
+We also get a test on the random effect (as described in this [article](https://doi.org/10.1093/biomet/ast038)). The hypothesis of no variation
 between the ids is rejected.
 
 We can get an estimate of the id SD:
@@ -267,7 +294,7 @@ the hyperparameters.
 
 # Discussion
 
-- No strong differences in the results
+- No strong differences in the results between the different methods.
 
 - LME4, MGCV and GINLA were very fast. INLA was fast. BRMS was slowest. But
 this is a small dataset and a simple model so we cannot draw too general
