--- a/mixed/nitrofen.qmd
+++ b/mixed/nitrofen.qmd
@@ -200,7 +200,8 @@ Fitting the model is very similar to `lmer` as seen above:
 #| warning: false
 #| error: false
 bmod <- brm(live ~ I(conc/300)*brood + (1|id), 
-            family=poisson, data=lnitrofen, 
+            family=poisson, 
+            data=lnitrofen, 
             refresh=0, silent=2, cores=4)
 ```
 
