--- a/mixed/jspmultilevel.Rmd
+++ b/mixed/jspmultilevel.Rmd
@@ -184,7 +184,7 @@ Also construct a plot the SD posteriors:
 
 ```{r jsppostsd}
 ddf <- data.frame(rbind(sigmasch,sigmacla,sigmaepsilon),errterm=gl(3,nrow(sigmasch),labels = c("school","class","epsilon")))
-ggplot(ddf, aes(x,y, linetype=errterm))+geom_line()+xlab("wear")+ylab("density")
+ggplot(ddf, aes(x,y, linetype=errterm))+geom_line()+xlab("math")+ylab("density")
 ```
 
 Posteriors look OK although no weight given to smaller values.
@@ -213,7 +213,7 @@ Make the plots:
 
 ```{r jsppostsdpc}
 ddf <- data.frame(rbind(sigmasch,sigmacla,sigmaepsilon),errterm=gl(3,nrow(sigmasch),labels = c("school","class","epsilon")))
-ggplot(ddf, aes(x,y, linetype=errterm))+geom_line()+xlab("wear")+ylab("density")
+ggplot(ddf, aes(x,y, linetype=errterm))+geom_line()+xlab("math")+ylab("density")
 ```
 
 
