--- a/mixed/pulp.qmd
+++ b/mixed/pulp.qmd
@@ -37,9 +37,10 @@ library(ggplot2)
 library(lme4)
 library(INLA)
 library(knitr)
-library(rstan, quietly=TRUE)
+library(cmdstanr)
 library(brms)
 library(mgcv)
+register_knitr_engine(override = FALSE)
 ```
 
 # Data
@@ -494,24 +495,57 @@ between a pair of operators.
 # STAN
 
 [STAN](https://mc-stan.org/) performs Bayesian inference using
-MCMC.
+MCMC. There are two ways to access Stan from within R - `rstan` and `cmdstanr`. 
+Previously I have used `rstan` but there have been some difficulties in updating
+the interface with Stan such that only an older version of Stan can be used
+and I cannot get `rstan` to work with R version 4.3. Although updates to
+fix this have been promised, I am switching to `cmdstanr` for this section
+because it works and works with the most recent version of Stan.
 
-Set up STAN to use multiple cores. Set the random number seed for reproducibility.
+You see below the Stan code to fit our model. Rmarkdown allows the use
+of Stan chunks (elsewhere I have R chunks). The chunk header looks
+like this. 
 
-```{r}
-rstan_options(auto_write = TRUE)
-options(mc.cores = parallel::detectCores())
-set.seed(123)
+STAN chunk will be compiled to 'mod'. Chunk header is:
+```
+cmdstan, output.var="mod", override = FALSE
 ```
 
-We need a STAN command file `pulp.stan` which we view here:
+An alternative approach would be to have the Stan code
+in a separate file. This might be more convenient in practice
+but we use the chunk approach since we can easily see the code.
+Compilation of the Stan code will now occur.
 
-```{r}
-writeLines(readLines("../stancode/pulp.stan"))
+```{cmdstan, output.var="mod", override = FALSE}
+data {
+  int<lower=0> N;
+  int<lower=0> J;
+  array[N] int<lower=1,upper=J> predictor;
+  array[N] real response;
+}
+parameters {
+  vector[J] eta;
+  real mu;
+  real<lower=0> sigmaalpha;
+  real<lower=0> sigmaepsilon;
+}
+transformed parameters {
+  vector[J] a;
+  vector[N] yhat;
+
+  a = mu + sigmaalpha * eta;
+
+  for (i in 1:N)
+    yhat[i] = a[predictor[i]];
+}
+model {
+  eta ~ normal(0, 1);
+
+  response ~ normal(yhat, sigmaepsilon);
+}
 ```
 
-We have used
-uninformative priors for the overall mean and the two variances.
+We have used uninformative priors for the overall mean and the two variances.
 Prepare data in a format consistent with the command file. Needs to be
 a list. Can't use the word `operator` since this is reserved for
 system use in STAN.
@@ -523,123 +557,89 @@ pulpdat <- list(N=nrow(pulp),
                 predictor=as.numeric(pulp$operator))
 ```
 
-Break the fitting process into three steps:
+Do the MCMC sampling:
 
-```{r pulpstancomp, cache=TRUE}
-rt <- stanc(file="../stancode/pulp.stan")
-suppressMessages(sm <- stan_model(stanc_ret = rt, verbose=FALSE))
-system.time(fit <- sampling(sm, data=pulpdat))
+```{r}
+fit <- mod$sample(
+  data = pulpdat, 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4,
+  refresh = 500 # print update every 500 iters
+)
 ```
+
 
 By default, we use 2000 iterations but repeated with independent
 starts 4 times giving 4 chains. We can thin but do not by default. The
-warmup period is half the number of observations (which is very
-conservative in this instance).
+warmup period is half the number of observations.
 
 We get warning messages about the fit. Since the default number
 of 2000 iterations runs in seconds, we can simply run a lot
 more iterations. This is rather lazy and would not be viable
 for more expensive computations, but sometimes CPU effort is
-preferred to mental effort.
-
-```{r pulpstanbigiter, cache=TRUE}
-system.time(fit <- sampling(sm, data=pulpdat, iter=100000))
-```
-
-The same underlying problems remain but the inference will now
-be more reliable.
+preferred to mental effort. We stick with the default here.
 
 ## Diagnostics
 
-Diagnostics to check the convergence are worthwhile. We plot
-the sampled $\mu$ in the four chains, choosing only every 100th
-observation (the plot becomes very dense if we show everything). The warm-up period is excluded. 
+Diagnostics to check the convergence are worthwhile. 
 
-```{r pulpmudiag}
-pname <- "mu"
-muc <- rstan::extract(fit, pars=pname,  permuted=FALSE, inc_warmup=FALSE)
-mdf <- reshape2::melt(muc)
-mdf |> dplyr::filter(iterations %% 100 == 0) |> 
-ggplot(aes(x=iterations,y=value,color=chains)) + geom_line() + ylab(mdf$parameters[1])
+Extract the draws into a convenient dataframe format:
+
+```{r}
+draws_df <- fit$draws(format = "df")
+```
+
+Check the diagnostics on the most problematic parameter:
+
+```{r cssadiag}
+ggplot(draws_df,
+       aes(x=.iteration,y=sigmaalpha,color=factor(.chain))) + geom_line() +
+  labs(color = 'Chain', x="Iteration")
 ```
 
 We see the traces of the four chains overlaid in different colors. The chains appear roughly stationary although there are some occasional larger 
-excursions (which is why we needed more iterations).
+excursions (which is why we prefer more iterations).
 
-The similar plots can be produced for the two variance terms although note that STAN uses the standard deviations (which we also prefer). Here is the group (operator) SD:
-
-```{r pulpalphadiag}
-pname <- "sigmaalpha"
-muc <- rstan::extract(fit, pars=pname,  permuted=FALSE, inc_warmup=FALSE)
-mdf <- reshape2::melt(muc)
-mdf |> dplyr::filter(iterations %% 100 == 0) |> 
-  ggplot(aes(x=iterations,y=value,color=chains)) + 
-  geom_line() + ylab(mdf$parameters[1])
-```
-
-This looks acceptable. We expect that the distribution will be asymmetric so this is no concern. The chains stay away
-from zero (or close to it). Here's the same plot for the error SD.
-
-```{r pulpepsdiag}
-pname <- "sigmaepsilon"
-muc <- rstan::extract(fit, pars=pname,  permuted=FALSE, inc_warmup=FALSE)
-mdf <- reshape2::melt(muc)
-mdf |> dplyr::filter(iterations %% 100 == 0) |> 
-  ggplot(aes(x=iterations,y=value,color=chains)) + 
-  geom_line() + ylab(mdf$parameters[1])
-```
-
-Again this looks satisfactory.
+The similar plots can be produced for other parameters although these are
+less likely to give us trouble.
 
 ## Output summaries
 
 We consider only the parameters of immediate interest:
 
 ```{r}
-print(fit, pars=c("mu","sigmaalpha","sigmaepsilon","a"))
+fit$summary(c("mu","sigmaalpha","sigmaepsilon","a"))
 ```
 
-We see the posterior mean, SE and SD of the samples. 
+We see the posterior mean, median, SD and MAD of the samples. 
 We see some quantiles from which we could construct a 95% credible
 interval (for example). 
-The `n_eff` is a rough measure of the sample size taking into account 
+The `ess` are rough measures of the sample size taking into account 
 the correlation in the
 samples. The effective sample sizes for the mean and operator SD primary parameters is not large (considering the number of iterations) although adequate enough for most purposes. The Rhat statistic is known as the
 potential scale reduction factor. Values much greater than one indicate that additional samples would significantly improve
-the inference. In this case, the factors are all one so we feel no inclination to draw more samples.
-
-We can also get the posterior means alone.
-
-```{r}
-(get_posterior_mean(fit, pars=c("mu","sigmaalpha","sigmaepsilon","a")))
-```
-
-We see that we get this information for each chain as well as overall. This gives a sense of why running more
-than one chain might be helpful in assessing the uncertainty in the posterior inference.
-
-
+the inference. In this case, the factors are all close to one so we feel no inclination to draw more samples.
 
 ## Posterior Distributions
 
-We can use `extract` to get at various components of the STAN fit. We plot the posterior densities for the SDs:
+Show posterior densities on the two variance terms:
 
-```{r pulppdae}
-postsig <- rstan::extract(fit, pars=c("sigmaalpha","sigmaepsilon"))
-ref <- reshape2::melt(postsig,value.name="bright")
-ggplot(ref,aes(x=bright, color=L1))+
-  geom_density()+
-  xlim(0,2) +
-  guides(color=guide_legend(title="SD"))
+```{r cspulpvars}
+sdf = stack(draws_df[,startsWith(colnames(draws_df),"sigma")])
+colnames(sdf) = c("bright","sigma")
+levels(sdf$sigma) = c("alpha","epsilon")
+ggplot(sdf, aes(x=bright,color=sigma)) + geom_density() + xlim(0,2)
 ```
 
 We see that the error SD can be localized much more than the operator SD.
 We can also look at the operator random effects:
 
-```{r pulpstanre}
-opre <- rstan::extract(fit, pars="a")
-ref <- reshape2::melt(opre, value.name="bright")
-ref[,2] <- (LETTERS[1:4])[ref[,2]]
-ggplot(data=ref,aes(x=bright, color=Var2))+geom_density()+guides(color=guide_legend(title="operator"))
+```{r cspulpre}
+adf = stack(draws_df[,startsWith(colnames(draws_df),"a")])
+colnames(adf) = c("bright","operator")
+levels(adf$operator) = letters[1:4]
+ggplot(adf, aes(x=bright,color=operator)) + geom_density()
 ```
 
 We see that the four operator distributions overlap.
@@ -651,10 +651,10 @@ between operators and answered this question with a computation
 of the probability that the operator SD is less than 0.1. We
 computed the proportion of sampled values less than 0.1.
 
+Compute the lower tail probability.
+
 ```{r}
-muc <- rstan::extract(fit, pars="sigmaalpha",  permuted=FALSE, inc_warmup=FALSE)
-mdf <- reshape2::melt(muc)
-mean(mdf$value < 0.1)
+fit$summary("sigmaalpha", tailprob = ~ mean(. <= 0.1))
 ```
 
 This is a somewhat larger probability than seen previously. The
@@ -670,9 +670,11 @@ a convenient wrapper to STAN functionality.
 Fitting the model is very similar to `lmer` as seen above:
 
 ```{r brmfit, cache=TRUE}
-suppressMessages(bmod <- brm(bright ~ 1+(1|operator), pulp))
+suppressMessages(bmod <- brm(bright ~ 1+(1|operator), pulp, backend = "cmdstanr"))
 ```
 
+Notice that we have specified the `cmdstanr` to be used internally due to
+the problems with the default choice of `rstan`.
 We get some warnings but not as severe as seen with our STAN fit
 above. We can obtain some posterior densities and diagnostics with:
 
@@ -696,7 +698,7 @@ more informative priors. Nevertheless, we do need to increase the
 number of iterations for more accurate estimation of tail probabilities.
 
 ```{r pulpbrmsmore, cache=TRUE}
-bmod <- brm(bright ~ 1+(1|operator), pulp, iter=10000, cores = 4)
+bmod <- brm(bright ~ 1+(1|operator), pulp, iter=10000, cores = 4, backend = "cmdstanr")
 ```
 
 Because the STAN programme was compiled earlier, this takes much less time
@@ -711,11 +713,11 @@ We now have better effective sample sizes. We can estimate
 the tail probability as before
 
 ```{r}
-bps = posterior_samples(bmod)
+bps = as_draws_df(bmod)
 mean(bps$sd_operator__Intercept < 0.1)
 ```
 
-A somewhat higher value than seen previously. The priors used here put
+A similar value to that seen previously. The priors used here put
 greater weight on smaller values of the SD.
 
 # MGCV
@@ -871,8 +873,10 @@ as me. But many more do not because otherwise the developers would have fixed it
 The errors and warnings are probably due to the specific configuration of
 my computer. I never did discover the source of the problem - suggestions
 on the internet required uninstalling and reinstalling large pieces of software. 
-Fortunately, I could see that the errors and warnings could be ignored. *Update: Now that I run the same code again a few months later, the errors and warnings have gone away. I don't know why. They might come back.*
-After several decades of fiddling with computers to get software to work, I (mostly) possess the patience and experience to deal with this sort of problem. That's far from true for many potential users. 
+Fortunately, I could see that the errors and warnings could be ignored. *Update: Now that I run the same code again a few months later, the errors and warnings have gone away. I don't know why. They might come back.* *Update no.2: After updating R to version 4.3,
+Stan and BRMS stopped working. After much research and experimentation, I found that
+the solution was to switch from `rstan` to `cmdstanr`.*
+After several decades of fiddling with computers to get software to work, I (mostly) possess the patience and experience to deal with these sorts of problems. That's far from true for many potential users. 
 
 7. Both STAN and INLA are being actively developed. Of course, it's good to know
 that functionality and performance are being improved. It's
@@ -894,7 +898,7 @@ to specify the model. Fortunately, `brms` (and `rstanarm`) allow less advanced u
 to skip these complications.
 
 9. Fitting Bayesian models is more likely to go wrong than GLMM models. For
-our STAN model, there were insufficient iterations. We did get a warning
+our STAN model, there were perhaps insufficient iterations. We did get a warning
 that suggested the solution of more iterations. Some warnings remained but
 we knew that is was safe to ignore them. With the INLA model, the default
 prior led to some unbelievable results. It took some knowledge to know
